// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`makeMatcherFromSearch should filter correctly on category 1`] = `
[
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": {
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": {
      "en": {
        "long_description": "A long description finally short",
      },
    },
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should filter correctly on doctype 1`] = `
[
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": {
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
]
`;

exports[`makeMatcherFromSearch should filter correctly on pending update apps 1`] = `
[
  {
    "availableVersion": "3.0.0",
    "categories": [
      "partners",
    ],
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [
        "3.0.0",
        "1.0.0",
      ],
      "dev": [
        "3.0.0",
        "1.0.0",
      ],
      "stable": [
        "3.0.0",
        "1.0.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should filter correctly on tags 1`] = `
[
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "categories": [
      "transport",
    ],
    "developer": {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "tags": [
      "transport",
      "files",
      "bills",
    ],
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": {
      "beta": [
        "0.1.0",
      ],
      "dev": [
        "0.1.0",
      ],
      "stable": [
        "0.1.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should filter correctly on type 1`] = `
[
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "categories": [
      "others",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": {
      "name": "For Dev Only",
    },
    "name": "DevOnly",
    "slug": "devonly",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [],
      "dev": [
        "1.0.0-betaojdkehy989ekhflldh",
      ],
      "stable": [],
    },
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": {
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": {
      "en": {
        "long_description": "A long description finally short",
      },
    },
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "availableVersion": "3.0.0",
    "categories": [
      "partners",
    ],
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [
        "3.0.0",
        "1.0.0",
      ],
      "dev": [
        "3.0.0",
        "1.0.0",
      ],
      "stable": [
        "3.0.0",
        "1.0.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should handle correctly multi filters 1`] = `
[
  {
    "categories": [
      "transport",
    ],
    "developer": {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "tags": [
      "transport",
      "files",
      "bills",
    ],
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": {
      "beta": [
        "0.1.0",
      ],
      "dev": [
        "0.1.0",
      ],
      "stable": [
        "0.1.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should not throw error if app with malformed permission and search on doctype 1`] = `[]`;

exports[`makeMatcherFromSearch should not throw error if app with no categories and search on category 1`] = `[]`;

exports[`makeMatcherFromSearch should not throw error if search is not provided 1`] = `
[
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "categories": [
      "others",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": {
      "name": "For Dev Only",
    },
    "name": "DevOnly",
    "slug": "devonly",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [],
      "dev": [
        "1.0.0-betaojdkehy989ekhflldh",
      ],
      "stable": [],
    },
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": {
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  {
    "categories": [
      "isp",
      "telecom",
    ],
    "developer": {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "name": "Bouilligue",
    "slug": "konnector-bouilligue",
    "type": "konnector",
    "uninstallable": true,
    "versions": {
      "beta": [
        "0.1.0",
      ],
      "dev": [
        "0.1.0",
      ],
      "stable": [
        "0.1.0",
      ],
    },
  },
  {
    "categories": [
      "transport",
    ],
    "developer": {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "tags": [
      "transport",
      "files",
      "bills",
    ],
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": {
      "beta": [
        "0.1.0",
      ],
      "dev": [
        "0.1.0",
      ],
      "stable": [
        "0.1.0",
      ],
    },
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": {
      "en": {
        "long_description": "A long description finally short",
      },
    },
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "availableVersion": "3.0.0",
    "categories": [
      "partners",
    ],
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [
        "3.0.0",
        "1.0.0",
      ],
      "dev": [
        "3.0.0",
        "1.0.0",
      ],
      "stable": [
        "3.0.0",
        "1.0.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should work even for an unsupported filter 1`] = `
[
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "categories": [
      "others",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": {
      "name": "For Dev Only",
    },
    "name": "DevOnly",
    "slug": "devonly",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [],
      "dev": [
        "1.0.0-betaojdkehy989ekhflldh",
      ],
      "stable": [],
    },
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": {
      "mock2": {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  {
    "categories": [
      "isp",
      "telecom",
    ],
    "developer": {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "name": "Bouilligue",
    "slug": "konnector-bouilligue",
    "type": "konnector",
    "uninstallable": true,
    "versions": {
      "beta": [
        "0.1.0",
      ],
      "dev": [
        "0.1.0",
      ],
      "stable": [
        "0.1.0",
      ],
    },
  },
  {
    "categories": [
      "transport",
    ],
    "developer": {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": {
      "mock": {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "tags": [
      "transport",
      "files",
      "bills",
    ],
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": {
      "beta": [
        "0.1.0",
      ],
      "dev": [
        "0.1.0",
      ],
      "stable": [
        "0.1.0",
      ],
    },
  },
  {
    "categories": [
      "cozy",
    ],
    "developer": {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": {
      "en": {
        "long_description": "A long description finally short",
      },
    },
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [
        "3.0.0",
      ],
      "dev": [
        "3.0.0",
      ],
      "stable": [
        "3.0.0",
      ],
    },
  },
  {
    "availableVersion": "3.0.0",
    "categories": [
      "partners",
    ],
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": {
      "beta": [
        "3.0.0",
        "1.0.0",
      ],
      "dev": [
        "3.0.0",
        "1.0.0",
      ],
      "stable": [
        "3.0.0",
        "1.0.0",
      ],
    },
  },
]
`;
